# thunderstorm-simulation-public

./: CMakeLists.txt  LICENSE  README.md
bgo-detector/: CMakeLists.txt  init_vis.mac  main.cc
bgo-detector/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Messenger.hh  Output.hh  PhysicsList.hh  RunAction.hh  SensitiveScoredDetector.hh  TrackingAction.hh  Utils.hh
bgo-detector/macros/: run.mac  settings.mac
bgo-detector/python/: process.py  responce_matrix_1.py  run.py  script_1.py  script_2_uniform.py
bgo-detector/src/: DetectorConstruction.cc  Messenger.cc  StackingAction.cc
estimation_of_number_of_runaway_electrons_per_avalanche_in_earths_atmosphere/: CMakeLists.txt  init_vis.mac  main.cc  process.py  run.mac  settings.mac  thunderstorm.proto
estimation_of_number_of_runaway_electrons_per_avalanche_in_earths_atmosphere/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Messenger.hh  Output.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  TrackingAction.hh  Utils.hh
estimation_of_number_of_runaway_electrons_per_avalanche_in_earths_atmosphere/macros/: run.mac
estimation_of_number_of_runaway_electrons_per_avalanche_in_earths_atmosphere/src/: DetectorConstruction.cc  Messenger.cc  StackingAction.cc
gamma_energy_deposit_in_scintillator/: CMakeLists.txt  Histogramm.ipynb  init_vis.mac  main.cc  run.mac
gamma_energy_deposit_in_scintillator/include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  SensitiveScoredDetector.hh  Settings.hh
gamma_energy_deposit_in_scintillator/settings/: settings.txt  settings_pb.txt
gamma_energy_deposit_in_scintillator/src/: DetectorConstruction.cc
